--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm Subhadip and I'm a <span class="typing-2"></span></div>
                     <p>I am pursuing my B.Tech from Dr. Sudhir Chandra Sur Degree Engineering College. I am looking for opportunity to grow and take my skill to the NEXT LEVEL. I have a keen interest in Python, Java, SQL, DBMS, Android and Web Development. Beside of this I have interest in <strong>Cloud, BlockChain and AI & ML</strong>. Other than technical things I like sketching and I am a fitness freak.</p>
-                    <a href="https://drive.google.com/file/d/1PvfnEfnGivmrO51O1LHmfO4aZrDX4wzU/view?usp=sharing" target="_blank">Download CV</a>
+                    <a href="https://youtu.be/BpmWTyKt3hk" target="_blank">Download CV</a>
                 </div>
             </div>
         </div>
